feat: 마이페이지 슬라이드 기능 추가

--- a/mypage.html
+++ b/mypage.html
@@ -9,10 +9,19 @@
   </head>
   <body>
     <div class="div-wrapper">
+        
       <div class="rectangle"></div>
       <div class="view"></div>
-      <img class="element" src="img/sisibibi_logo.png" />
-      <div class="GNB">
+      <div class="left-bg">
+      <img class="element-mypage" src="img/sisibibi_logo.png" />
+      <div class="mypage-text">마이페이지</div>
+      
+     <nav id="my-sidebar"></nav>
+    <script src="mysidebar.js"></script>
+    <div class="text-wrapper-2">로그아웃</div>
+    </div>
+
+       <div class="GNB">
         <div class="frame">
           <div class="div"><div class="text-wrapper">예약하기</div></div>
           <div class="div"><div class="text-wrapper">정보소개</div></div>
@@ -20,13 +29,6 @@
           <div class="div"><div class="text-wrapper">정보마당</div></div>
           <div class="div"><div class="text-wrapper">마이페이지</div></div>
         </div>
-      </div>
-      <div class="text-wrapper-2">로그아웃</div>
-      <div class="group">
-        <div class="text-wrapper-3">마이페이지</div>
-        <div class="text-wrapper-4">내 정보</div>
-        <div class="text-wrapper-5">즐겨찾기</div>
-        <div class="text-wrapper-6">설정</div>
       </div>
       <div class="group-2">
         <div class="favorite-wrapper"><img class="favorite" src="img/favorite.png" /></div>
