feat: 마이페이지 정보수정 기능 추가

--- a/mypage.html
+++ b/mypage.html
@@ -8,16 +8,18 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-   
     <div class="layout">
       <div class="rectangle"></div>
       <div class="view"></div>
       <div class="left-bg">
       <img class="element-mypage" src="img/sisibibi_logo.png" />
-      <div class="mypage-text">마이페이지</div> 
+      <div class="mypage-text">마이페이지</div>
+      
+     <nav id="my-sidebar"></nav>
     <div class="text-wrapper-2">로그아웃</div>
     </div>
 <div id="content-area" class="content-area">
+  
 </div>
  <script src="mysidebar.js"></script>
 <div>
@@ -31,47 +33,6 @@
             </div>
           </div>
     </div>
-
+    
   </body>
 </html>
-<!-- 
-       <div class="GNB">
-        <div class="frame">
-          <div class="div"><div class="text-wrapper">예약하기</div></div>
-          <div class="div"><div class="text-wrapper">정보소개</div></div>
-          <div class="div"><div class="text-wrapper">부대시설</div></div>
-          <div class="div"><div class="text-wrapper">정보마당</div></div>
-          <div class="div"><div class="text-wrapper">마이페이지</div></div>
-        </div>
-      </div>
-      <div class="group-2">
-        <div class="favorite-wrapper"><img class="favorite" src="img/favorite.png" /></div>
-        <div class="text-wrapper-7">나의 즐겨찾기</div>
-      </div>
-      <img class="img" src="img/group-2085668836.png" />
-      <div class="group-3">
-        <div class="group-4">
-          <div class="text-wrapper-8">www298@naver.com</div>
-          <div class="frame-2">
-            <div class="text-wrapper-9">전화번호</div>
-            <div class="text-wrapper-10">010-0000-1111</div>
-            <div class="text-wrapper-11">생년월일</div>
-            <div class="text-wrapper-12">2003.00.13</div>
-            <div class="text-wrapper-13">비밀번호</div>
-            <div class="group-5">
-              <img class="general-edit" src="img/edit.svg" />
-              <div class="text-wrapper-14">수정</div>
-            </div>
-          </div>
-        </div>
-        <div class="group-6">
-          <img class="general-edit" src="img/image.svg" />
-          <div class="text-wrapper-14">수정</div>
-        </div>
-      </div>
-      <div class="group-7">
-        <div class="ellipse"></div>
-        <img class="favorite-2" src="img/image.png" />
-        <p class="p">즐겨찾기를 설정하고<br />원하는 상품을 빠르게 알아보세요.</p>
-      </div> -->
-    <!-- </div> -->
