fix: main 페이지 메뉴바 수정 및 하트 크기 수정

--- a/index.html
+++ b/index.html
@@ -13,12 +13,23 @@
       <header class="header-section">
         <div class="rectangle"></div>
         <nav class="top-navigation">
+
           <img class="logo" src="img/sisibibi_logo.png" alt="시세비비 로고" />
-          <div class="login-button">
-            <div class="login-button-inner">
+          <div class="button-container">
+          <div class="m-button">
+            <div class="m-button-inner">
+              <span class="login-text">재철 확인하기</span>
+              <span class="login-text">정보소개</span>
+              <span class="login-text">정보 마당</span>
+              <span class="login-text">마이페이지</span>
+            </div>
+            </div>
+            <div class="login-button">
+            <!-- <div class="login-button-inner"> -->
               <img class="user-icon" src="img/user.png" alt="사용자 아이콘" />
               <span class="login-text">로그인 / 회원가입</span>
-            </div>
+            <!-- </div> -->
+          </div>
           </div>
         </nav>
         <h1 class="main-heading">
