feat: 버튼 이동 기능 추가

--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
         <div class="rectangle"></div>
         <nav class="top-navigation">
 
-          <img class="logo" src="img/sisibibi_logo.png" alt="시세비비 로고" />
+          <img class="logo" src="img/sisibibi_logo.png" alt="시세비비 로고"  />
           <div class="button-container">
           <div class="m-button">
             <div class="m-button-inner">
               <span class="login-text">재철 확인하기</span>
               <span class="login-text">정보소개</span>
               <span class="login-text">정보 마당</span>
-              <span class="login-text">마이페이지</span>
+              <span class="login-text" onclick="location.href='mypage.html'">마이페이지</span>
             </div>
             </div>
             <div class="login-button">
