--- a/mypage.html
+++ b/mypage.html
@@ -12,7 +12,7 @@
       <div class="rectangle"></div>
       <div class="view"></div>
       <div class="left-bg">
-      <img class="element-mypage" src="img/sisibibi_logo.png" />
+      <img class="element-mypage" src="img/sisibibi_logo.png"onclick="location.href='index.html'" />
       <div class="mypage-text">마이페이지</div>
       
      <nav id="my-sidebar"></nav>
